environments/test/us-east-1/argocd/manifests/default/bookinfo/istio/virtual_service/details_vs.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: details
spec:
  hosts:
  - details  # when clients make a request to http://details
  http:
  - route:
    - destination:
        host: details # send them to the detail Kubernetes Service
    timeout: 5s
    retries:
     retryOn: 5xx
     perTryTimeout: 2s
     attempts: 2
