environments/test/us-east-1/argocd/manifests/default/bookinfo/istio/virtual_service/productpage_vs.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: productpage
  namespace: default
spec:
  hosts:
#   - "istio-nlb-f1ee2444c7b26ede.elb.us-east-1.amazonaws.com"
  - "*"
  gateways:
  - istio-system/gateway
  exportTo:
  - istio-system
  http:
  - match:
    - uri:
        exact: /productpage
    - uri:
        prefix: /static
    - uri:
        exact: /login
    - uri:
        exact: /logout
    - uri:
        prefix: /api/v1/products
    route:
    - destination:
        host: productpage
        subset: v1
        port:
          number: 9080
      weight: 10
    - destination:
        host: productpage
        subset: v2
        port:
          number: 9080
      weight: 90





  # - route:
  #   - destination:
  #       host: bookinfo-product-page-dr
  #       subset: v1
  #       port:
  #         number: 9080
  #     weight: 70
  #   - destination:
  #       host: bookinfo-product-page-dr
  #       subset: v2
  #       port:
  #         number: 9080
  #     weight: 30
# ---
# apiVersion: networking.istio.io/v1beta1
# kind: VirtualService
# metadata:
#   namespace: bookinfo
#   name: bookinfo
# spec:
#   hosts:
#   - bookinfo.local
#   gateways:
#   - istio-ingress/gateway
#   exportTo:
#   - istio-ingress
#   http:
#   - route:
#     - destination:
#         host: productpage
#         subset: v1
#         port:
#           number: 9080
#       weight: 70
#     - destination:
#         host: productpage
#         subset: v2
#         port:
#           number: 9080
#       weight: 30
