environments/test/us-east-1/argocd/manifests/default/bookinfo/istio/virtual_service/reviews_vs.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: reviews-vs
spec:
  hosts:
  - reviews
  # gateways:
  # - bookinfo-gateway
  http:
  # - match:
  #   - headers:
  #       end-user:
  #         exact: tester
  #   fault:
  #     # delay:
  #     #   fixedDelay: 2.5s
  #     #   percentage:
  #     #     value: 100
  #     abort:
  #       percentage:
  #         value: 50
  #       httpStatus: 503
  - route:
    - destination:
        host: reviews
        port:
          number: 9080
        subset: v2
      weight: 30
  # - route:
    - destination:
        host: reviews
        port:
          number: 9080
        subset: v1
      weight: 70


# apiVersion: networking.istio.io/v1beta1
# kind: VirtualService
# metadata:
#   name: reviews-vs
# spec:
#   hosts:
#   - reviews
#   http:
#   - route:
#     - destination:
#         host: reviews
#         subset: v1
#       weight: 60
#     - destination:
#         host: reviews
#         subset: v2
#       weight: 40
